# shapely-cli

./: README.md  pyproject.toml
src/shapelycli/: cli.py
tests/: great-lakes.geojson  great-lakes.ndjson  run.sh  suite.sh
