[project]
name = "shapelycli"
description = "A command line tool for operating on GeoJSON objects with Shapely"
version = "0.1.0"
authors = [
    { name = "Jake Low", email = "hello@jakelow.com" }
]
dependencies = [
    "click",
    "shapely >= 2.0.0",
    "pyproj >= 3.6.0",
]

[project.scripts]
shapely = "shapelycli.cli:main"
